// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Remove mount point on unmount 1`] = `
<body
  style="overflow: hidden;"
>
  <div />
</body>
`;

exports[`Render closed modal with just a content element 1`] = `
.emotion-0 {
  box-sizing: border-box;
  position: fixed;
  width: 100vw;
  height: 100vh;
  z-index: 1000;
  left: 0;
  top: 0;
  overflow: scroll;
  background-color: var(--pbl-theme-colors-blackOpacity-600);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  pointer-events: none;
  opacity: 0;
}

.emotion-1 {
  box-sizing: border-box;
  -webkit-transform: translateY(60px);
  -moz-transform: translateY(60px);
  -ms-transform: translateY(60px);
  transform: translateY(60px);
  -webkit-transition: -webkit-transform 0.3s;
  transition: transform 0.3s;
  max-width: 780px;
  margin: auto;
  min-height: -webkit-min-content;
  min-height: -moz-min-content;
  min-height: min-content;
  padding: clamp(1.5rem, 1.2857142857142856rem + 1.0714285714285714vw, 2.25rem);
}

.emotion-2 {
  box-sizing: border-box;
  border-radius: 12px;
  background-color: var(--pbl-theme-colors-background);
  padding: clamp(0.75rem, 0.6428571428571428rem + 0.5357142857142857vw, 1.125rem);
  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
}

<body
  style="overflow: auto;"
>
  <div />
  <div
    data-testid="pbl-modal-mountpoint"
  >
    <div
      class="emotion-0"
      data-testid="pbl-modal-backdrop"
    >
      <div
        class="emotion-1"
        data-testid="pbl-modal-area"
      >
        <div
          aria-modal="true"
          class="emotion-2"
          data-testid="pbl-modal-box"
        >
          <div>
            Hello World
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Render with additional panes 1`] = `
.emotion-0 {
  box-sizing: border-box;
  -webkit-transition: -webkit-transform 0.3s;
  transition: transform 0.3s;
  max-width: 780px;
  margin: auto;
  min-height: -webkit-min-content;
  min-height: -moz-min-content;
  min-height: min-content;
  padding: clamp(1.5rem, 1.2857142857142856rem + 1.0714285714285714vw, 2.25rem);
}

.emotion-1 {
  box-sizing: border-box;
  border-radius: 12px;
  background-color: var(--pbl-theme-colors-background);
  padding: clamp(0.75rem, 0.6428571428571428rem + 0.5357142857142857vw, 1.125rem);
  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
}

.emotion-2 {
  box-sizing: border-box;
  margin-top: clamp(0.75rem, 0.6428571428571428rem + 0.5357142857142857vw, 1.125rem);
}

<div
  class="emotion-0"
  data-testid="pbl-modal-area"
  open=""
>
  <div
    aria-modal="true"
    class="emotion-1"
    data-testid="pbl-modal-box"
  >
    <div>
      Hello World
    </div>
  </div>
  <div
    class="emotion-2"
    data-testid="pbl-modal-pane"
  >
    <div
      class="emotion-1"
      data-testid="pbl-modal-pane-box"
    >
      <div>
        Pane 1
      </div>
    </div>
  </div>
  <div
    class="emotion-2"
    data-testid="pbl-modal-pane"
  >
    <div
      class="emotion-1"
      data-testid="pbl-modal-pane-box"
    >
      <div>
        Pane 2
      </div>
    </div>
  </div>
  <div
    class="emotion-2"
    data-testid="pbl-modal-pane"
  >
    <div
      class="emotion-1"
      data-testid="pbl-modal-pane-box"
    >
      <div>
        Pane 3
      </div>
    </div>
  </div>
</div>
`;

exports[`Render with title 1`] = `
.emotion-0 {
  box-sizing: border-box;
  border-radius: 12px;
  background-color: var(--pbl-theme-colors-background);
  padding: clamp(0.75rem, 0.6428571428571428rem + 0.5357142857142857vw, 1.125rem);
  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-2 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-size: var(--pbl-theme-typography-base-fontSize);
  line-height: var(--pbl-theme-typography-base-lineHeight);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin-bottom: var(--pbl-theme-typography-base-marginBottom);
  font-style: normal;
  margin: 0;
  font-family: var(--pbl-theme-typography-h3-fontFamily);
  font-size: var(--pbl-theme-typography-h3-fontSize);
  line-height: var(--pbl-theme-typography-h3-lineHeight);
  font-weight: var(--pbl-theme-typography-h3-fontWeight);
  margin-bottom: var(--pbl-theme-typography-h3-marginBottom);
}

<div
  aria-modal="true"
  class="emotion-0"
  data-testid="pbl-modal-box"
>
  <div
    class="emotion-1"
    data-testid="pbl-modal-title-box"
  >
    <h3
      class="emotion-2"
    >
      Hans 
      <strong>
        Wurst
      </strong>
    </h3>
  </div>
  <div>
    Hello World
  </div>
</div>
`;

exports[`Render with title and topRightItem 1`] = `
.emotion-0 {
  box-sizing: border-box;
  border-radius: 12px;
  background-color: var(--pbl-theme-colors-background);
  padding: clamp(0.75rem, 0.6428571428571428rem + 0.5357142857142857vw, 1.125rem);
  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-2 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-size: var(--pbl-theme-typography-base-fontSize);
  line-height: var(--pbl-theme-typography-base-lineHeight);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin-bottom: var(--pbl-theme-typography-base-marginBottom);
  font-style: normal;
  margin: 0;
  font-family: var(--pbl-theme-typography-h3-fontFamily);
  font-size: var(--pbl-theme-typography-h3-fontSize);
  line-height: var(--pbl-theme-typography-h3-lineHeight);
  font-weight: var(--pbl-theme-typography-h3-fontWeight);
  margin-bottom: var(--pbl-theme-typography-h3-marginBottom);
}

<div
  aria-modal="true"
  class="emotion-0"
  data-testid="pbl-modal-box"
>
  <div
    class="emotion-1"
    data-testid="pbl-modal-title-box"
  >
    <h3
      class="emotion-2"
    >
      Hans 
      <strong>
        Wurst
      </strong>
    </h3>
    <div>
      something
    </div>
  </div>
  <div>
    Hello World
  </div>
</div>
`;

exports[`Render with topRightItem 1`] = `
.emotion-0 {
  box-sizing: border-box;
  border-radius: 12px;
  background-color: var(--pbl-theme-colors-background);
  padding: clamp(0.75rem, 0.6428571428571428rem + 0.5357142857142857vw, 1.125rem);
  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  aria-modal="true"
  class="emotion-0"
  data-testid="pbl-modal-box"
>
  <div
    class="emotion-1"
    data-testid="pbl-modal-title-box"
  >
    <div>
      something
    </div>
  </div>
  <div>
    Hello World
  </div>
</div>
`;
